# remonline_adminer

./: .gitignore  README.md  apply_migration.py  architecture.md  flow.py  main.py  pyproject.toml  run.py
app/api/: __init__.py  schemas.py
app/api/routes/: products.py  stocks.py  tabs.py  warehouses.py
app/core/: config.py
app/models/: __init__.py  database.py  last_update.py  product.py  stock.py  tab.py  warehouse.py
app/services/: __init__.py  background_service.py  remonline_service.py
app/static/: products.html
app/static/css/: products-tile-theme.css  products.css  tabs.css
app/static/js/: products-tile-theme.js  products.js  tab.js  tabs.js  theme-manager.js
app/tests/: conftest.py  test_api.py  test_integration.py
migrations/: 001_create_tabs.sql
